--- a/patents/templates/create.html
+++ b/patents/templates/create.html
@@ -113,8 +113,8 @@
 
 
         <div class="button-container">
-            <button type="button" class="link-button" data-url="{% url 'organisation' %}">Organization</button>
-            <button type="button" class="link-button reset" data-url="{% url 'agent_signup' %}">Patent Agent</button>
+            <button type="button" class="link-button" data-url="agent_reg.html">Organization</button>
+            <button type="button" class="link-button reset" data-url="organisation.html">Patent Agent</button>
 
         </div>
 
